# CameraSpecialEffect

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/cameraspecialeffect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: bigface_frag.glsl  bigface_vert.glsl  bilateblur_frag.glsl  bilateblur_vert.glsl  face_frag.glsl  face_vert.glsl  firework_expode_frag.glsl  firework_expode_vert.glsl  firework_rise_frag.glsl  firework_rise_vert.glsl  frame_frag.glsl  frame_vert.glsl  glassball_frag.glsl  glassball_vert.glsl  heart_frag.glsl  heart_vert.glsl  new_firework_frag.glsl  new_firework_vert.glsl  rvm_frag.glsl  rvm_vert.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/faces/: ImageUtils.cpp  ImageUtils.h  Pfld.cpp  Pfld.hpp  UltraFace.cpp  UltraFace.hpp
app/src/main/cpp/renders/: BaseVideoRender.cpp  BaseVideoRender.h  BigFaceRender.cpp  BigFaceRender.h  FaceVideoRender.cpp  FaceVideoRender.h  FireworkRender.cpp  FireworkRender.h  GlassBallRender.cpp  GlassBallRender.h  HeartRender.cpp  HeartRender.h  NewFireworkRender.cpp  NewFireworkRender.h  RVMRender.cpp  RVMRender.h  StyleTransferRender.cpp  StyleTransferRender.h
app/src/main/cpp/utils/: FireworkModel.cpp  FireworkModel.h  Log.h  NewFireworkModel.cpp  NewFireworkModel.h  PngTool.cpp  PngTool.h  ProgramLoader.cpp  ProgramLoader.h  RVMModel.cpp  RVMModel.h  StyleTransferModel.cpp  StyleTransferModel.h  imported_model.cpp  imported_model.h
app/src/main/java/com/example/cameraspecialeffect/: CameraHelper.java  GLRenderJNI.java  GLVideoRender.java  ImageListner.java  MainActivity.java
app/src/main/res/drawable/: change_btn_foreground.xml  choose_btn_foreground.xml  open_btn_foreground.xml  save_btn_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: camera_btn.xml  change_btn_round.xml  choose_btn.xml  close_btn.xml  open_btn.xml  save_btn_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cameraspecialeffect/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
